--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "amirshnll/persian-swear-words",
     "description": "This is a to-be-complete list of Persian Swears you can use in your production to filter unwanted content. Wordlist is available in JSON format and there is also a helper class written in PHP to assist you how to use this datas.",
     "type": "dataset",
-    "license": "MIT License",
+    "license": "MIT",
     "authors": [
         {
             "name": "Amir Shokri",
