fix update label

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "content moderation"
   ],
   "author": "Amir Shokri <amirsh.nll@gmail.com> (https://ashokri.com)",
-  "license": "Apache-2.0 license",
+  "license": "Apache-2.0",
   "bugs": {
     "url": "https://github.com/amirshnll/Persian-Swear-Words/issues"
   },
